--- a/package.json
+++ b/package.json
@@ -53,17 +53,16 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
-    "@angular/animations": "^6.1.0 || ^7.0.0",
-    "@angular/common": "^6.1.0 || ^7.0.0",
-    "@angular/compiler": "^6.1.0 || ^7.0.0",
-    "@angular/core": "^6.1.0 || ^7.0.0",
-    "@angular/forms": "^6.1.0 || ^7.0.0",
-    "@angular/http": "^6.1.0 || ^7.0.0",
-    "@angular/platform-browser": "^6.1.0 || ^7.0.0",
-    "@angular/platform-browser-dynamic": "^6.1.0 || ^7.0.0",
-    "core-js": "^2.5.3",
+    "@angular/animations": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/common": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/compiler": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/forms": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/http": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/platform-browser": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/platform-browser-dynamic": "^6.1.0 || ^7.0.0 || ^8.0.0",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
+    "zone.js": "^0.8.26 || ^0.9.0",
     "carbon-components": "^10.0.0",
     "@carbon/icons-angular": "^10.1.0"
   },
@@ -86,14 +85,14 @@
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "@compodoc/compodoc": "1.1.7",
-    "@storybook/addon-actions": "5.0.6",
-    "@storybook/addon-knobs": "5.0.6",
-    "@storybook/addon-links": "5.0.6",
-    "@storybook/addon-options": "5.0.6",
-    "@storybook/addon-storysource": "5.0.6",
-    "@storybook/addon-notes": "5.0.6",
-    "@storybook/addons": "5.0.6",
-    "@storybook/angular": "5.0.6",
+    "@storybook/addon-actions": "5.1.1",
+    "@storybook/addon-knobs": "5.1.1",
+    "@storybook/addon-links": "5.1.1",
+    "@storybook/addon-options": "5.1.1",
+    "@storybook/addon-storysource": "5.1.1",
+    "@storybook/addon-notes": "5.1.1",
+    "@storybook/addons": "5.1.1",
+    "@storybook/angular": "5.1.1",
     "@types/jasmine": "3.3.12",
     "@types/node": "11.13.0",
     "angular2-template-loader": "0.6.2",
