--- a/package.json
+++ b/package.json
@@ -85,14 +85,14 @@
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "@compodoc/compodoc": "1.1.7",
-    "@storybook/addon-actions": "5.1.3",
-    "@storybook/addon-knobs": "5.1.3",
-    "@storybook/addon-links": "5.1.3",
-    "@storybook/addon-options": "5.1.3",
-    "@storybook/addon-storysource": "5.1.3",
-    "@storybook/addon-notes": "5.1.3",
-    "@storybook/addons": "5.1.3",
-    "@storybook/angular": "5.1.3",
+    "@storybook/addon-actions": "5.1.8",
+    "@storybook/addon-knobs": "5.1.8",
+    "@storybook/addon-links": "5.1.8",
+    "@storybook/addon-options": "5.1.8",
+    "@storybook/addon-storysource": "5.1.8",
+    "@storybook/addon-notes": "5.1.8",
+    "@storybook/addons": "5.1.8",
+    "@storybook/angular": "5.1.8",
     "@types/jasmine": "3.3.12",
     "@types/node": "11.13.0",
     "angular2-template-loader": "0.6.2",
@@ -147,7 +147,6 @@
   },
   "dependencies": {
     "@carbon/utils-position": "1.0.0",
-    "flatpickr": "4.6.1",
-    "ng2-flatpickr": "8.0.1"
+    "flatpickr": "4.6.1"
   }
 }
