--- a/package.json
+++ b/package.json
@@ -94,7 +94,6 @@
     "@storybook/angular": "5.1.8",
     "@types/jasmine": "2.8.2",
     "@types/node": "11.13.0",
-    "ng-packagr": "5.3.0",
     "angular2-template-loader": "0.6.2",
     "babel-loader": "8.0.5",
     "carbon-components": "10.4.1",
@@ -119,10 +118,11 @@
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
-    "node-sass": "4.11.0",
+    "ng-packagr": "5.3.0",
     "postcss-loader": "3.0.0",
     "raw-loader": "1.0.0",
     "rxjs": "6.4.0",
+    "sass": "1.22.12",
     "sass-loader": "7.1.0",
     "semantic-release": "16.0.0-beta.18",
     "style-loader": "0.23.1",
