Add tests to select

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"rootDir": "src",
 		"target": "es2015",
 		"typeRoots": [
-			"./node_modules/@types",
+			"./node_modules/@types"
 		]
 	},
 	"include": [
