--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -25,10 +25,10 @@
 		]
 	},
 	"files": [
-		"src/test.ts",
+		"src/test.ts"
 	],
 	"include": [
-		"**/*.spec.ts",
+		"**/*.spec.ts"
 	],
 	"angularCompilerOptions": {
 		"annotateForClosureCompiler": true,
