--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "core-js": "3.1.3",
     "css-loader": "2.1.1",
     "cz-conventional-changelog-components": "1.0.0",
+    "element-closest-polyfill": "1.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "3.0.1",
     "gulp": "4.0.0",
@@ -144,7 +145,6 @@
   },
   "dependencies": {
     "@carbon/utils-position": "1.0.0",
-    "element-closest-polyfill": "^1.0.0",
     "flatpickr": "4.6.1"
   }
 }
