--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "cz-conventional-changelog-components": "1.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "3.0.1",
+    "file-type": "12.4.0",
     "gulp": "4.0.0",
     "gulp-concat": "2.6.1",
     "gulp-tap": "1.0.1",
