--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "@angular/router": "6.1.0",
     "@babel/core": "7.4.3",
     "@carbon/icons-angular": "10.4.0",
-    "@commitlint/cli": "7.5.2",
-    "@commitlint/config-conventional": "7.5.0",
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
     "@compodoc/compodoc": "1.1.7",
     "@storybook/addon-actions": "5.3.13",
     "@storybook/addon-knobs": "5.3.13",
@@ -98,7 +98,7 @@
     "babel-loader": "8.0.5",
     "carbon-components": "10.9.2",
     "codelyzer": "5.0.0",
-    "commitizen": "3.0.7",
+    "commitizen": "4.0.3",
     "core-js": "3.1.3",
     "css-loader": "2.1.1",
     "cz-conventional-changelog-components": "1.0.0",
@@ -126,7 +126,7 @@
     "rxjs": "6.4.0",
     "sass": "1.22.12",
     "sass-loader": "7.1.0",
-    "semantic-release": "16.0.0-beta.18",
+    "semantic-release": "17.0.4",
     "style-loader": "0.23.1",
     "stylelint": "8.4.0",
     "stylelint-webpack-plugin": "0.10.5",
