--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "@angular/router": "6.1.0",
     "@babel/core": "7.4.3",
     "@carbon/icons-angular": "10.4.0",
-    "@commitlint/cli": "7.5.2",
-    "@commitlint/config-conventional": "7.5.0",
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
     "@compodoc/compodoc": "1.1.7",
     "@storybook/addon-actions": "5.3.13",
     "@storybook/addon-knobs": "5.3.13",
@@ -114,19 +114,19 @@
     "husky": "1.3.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "3.1.0",
+    "karma": "3.1.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.1",
-    "karma-jasmine-html-reporter": "1.5.2",
+    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.2",
     "ng-packagr": "5.3.0",
     "postcss-loader": "3.0.0",
     "raw-loader": "1.0.0",
     "rxjs": "6.4.0",
     "sass": "1.22.12",
     "sass-loader": "7.1.0",
-    "semantic-release": "16.0.0-beta.18",
+    "semantic-release": "17.0.4",
     "style-loader": "0.23.1",
     "stylelint": "8.4.0",
     "stylelint-webpack-plugin": "0.10.5",
