--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "lint": "tslint src/**/*.ts && stylelint src/**/*.scss --config .stylelintrc.yml",
     "test": "ng test --no-watch",
     "test:watch": "ng test --watch",
-    "utils:add": "git subtree add --prefix=src/utils git@github.ibm.com:peretz/utils.git master --squash",
-    "utils:update": "git subtree pull --prefix=src/utils git@github.ibm.com:peretz/utils.git master --squash",
     "build-storybook": "build-storybook -c .storybook -s .storybook/public -o dist/docs/storybook",
     "semantic-release": "semantic-release",
     "commit": "git-cz",
@@ -60,7 +58,7 @@
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26 || ^0.9.0",
     "carbon-components": "^10.0.0",
-    "@carbon/icons-angular": "^10.1.0"
+    "@carbon/icons-angular": "^11.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.13.9",
@@ -76,7 +74,7 @@
     "@angular/platform-browser-dynamic": "7.2.16",
     "@angular/router": "7.2.16",
     "@babel/core": "7.4.3",
-    "@carbon/icons-angular": "10.8.0",
+    "@carbon/icons-angular": "11.0.0",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@compodoc/compodoc": "1.1.7",
@@ -95,7 +93,7 @@
     "carbon-components": "10.9.2",
     "codelyzer": "5.0.0",
     "commitizen": "4.0.3",
-    "core-js": "3.1.3",
+    "core-js": "2.6.11",
     "css-loader": "2.1.1",
     "cz-conventional-changelog-components": "1.0.0",
     "element-closest-polyfill": "1.0.0",
@@ -140,7 +138,8 @@
     "webpack-dev-server": "3.2.1",
     "webpack-node-externals": "1.7.2",
     "whatwg-fetch": "3.0.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "autoprefixer": "8.6.5"
   },
   "dependencies": {
     "@carbon/utils-position": "1.1.3",
