--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
         "channel": "carbon-v9",
         "range": "2.X"
       }
-	],
-	"tagFormat": "v${version}@latest"
+    ],
+    "tagFormat": "v${version}@latest"
   },
   "config": {
     "commitizen": {
@@ -98,12 +98,14 @@
     "angular2-template-loader": "0.6.2",
     "babel-loader": "8.0.5",
     "carbon-components": "10.9.2",
+    "chai": "^4.2.0",
     "codelyzer": "5.0.0",
     "commitizen": "3.0.7",
     "core-js": "3.1.3",
     "css-loader": "2.1.1",
     "cz-conventional-changelog-components": "1.0.0",
     "element-closest-polyfill": "1.0.0",
+    "exported-tests": "https://github.com/IBM/exported-tests.git",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "3.0.1",
     "file-type": "12.4.0",
