--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
+    "lodash-es": "^4.17.15",
     "ng-packagr": "5.3.0",
     "postcss-loader": "3.0.0",
     "raw-loader": "1.0.0",
