--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "range": "2.X"
       }
     ],
-    "tagFormat": "v${version}@latest"
+    "tagFormat": "v${version}@next"
   },
   "config": {
     "commitizen": {
