fix: update package.json peer deps

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "@angular/forms": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26 || ^0.9.0",
+    "zone.js": "^0.8.26 || ^0.9.0 || ^0.10.0",
     "carbon-components": "^10.0.0",
     "@carbon/icons-angular": "^11.0.0"
   },
