--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 			},
 			{
 				"name": "v3",
-				"channel": "v3",
+				"channel": "carbon-v3",
 				"range": "3.x"
 			},
 			{
@@ -44,7 +44,7 @@
 				"range": "2.X"
 			}
 		],
-		"tagFormat": "v${version}@latest"
+		"tagFormat": "v${version}"
 	},
 	"config": {
 		"commitizen": {
