--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"storybook": "start-storybook -s .storybook/public -p 6006",
 		"docs:build": "compodoc -p tsconfig.json",
 		"docs:server": "compodoc -p tsconfig.json -s -w",
-		"lint": "tslint src/**/*.ts && stylelint src/**/*.scss --config .stylelintrc.yml",
+		"lint": "tslint 'src/**/*.ts' && stylelint 'src/**/*.scss' --config .stylelintrc.yml",
+		"lint:fix": "tslint --fix 'src/**/*.ts' && stylelint 'src/**/*.scss' --config .stylelintrc.yml",
 		"test": "ng test --no-watch",
 		"test:watch": "ng test --watch",
 		"build-storybook": "build-storybook -c .storybook -s .storybook/public -o dist/docs/storybook",
