--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,15 @@
 		"target": "es2015",
 		"typeRoots": [
 			"./node_modules/@types"
-		]
+		],
+		"paths": {
+			"carbon-components-angular": [
+				"./src"
+			],
+			"carbon-components-angular/*": [
+				"./src/*"
+			]
+		},
 	},
 	"include": [
 		"src/**/*"
