--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
 		"@carbon/icons-angular": "^11.0.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "0.13.9",
-		"@angular-devkit/build-ng-packagr": "0.13.9",
+		"@angular-devkit/build-angular": "0.13.10",
+		"@angular-devkit/build-ng-packagr": "0.13.10",
 		"@angular-devkit/core": "7.3.9",
 		"@angular/cli": "7.3.9",
 		"@angular/common": "7.2.16",
@@ -152,6 +152,7 @@
 		"zone.js": "0.8.26"
 	},
 	"dependencies": {
+		"@angular/animations": "^9.1.11",
 		"@carbon/utils-position": "1.1.3",
 		"flatpickr": "4.6.1"
 	}
