--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - "sleep 3"
   - "sudo chown root /opt/google/chrome/chrome-sandbox"
   - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
-script: "npm run lint && npm test"
+script: "npm run lint && npm test && npm run ng:build"
 deploy:
   provider: script
   script: "bash ./scripts/deploy.sh"
