update travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - "sleep 3"
   - "sudo chown root /opt/google/chrome/chrome-sandbox"
   - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
-script: "npm run lint && npm test && travis_wait npm run ng:build"
+script: "bash ./scripts/travis.sh"
 deploy:
   provider: script
   script: "bash ./scripts/deploy.sh"
