try to use travis jobs to speed up the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,13 @@ before_script:
   - "sleep 3"
   - "sudo chown root /opt/google/chrome/chrome-sandbox"
   - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
-script:
-  - npm run lint
-  - npm test
-  - travis_wait npm run ng:build
+jobs:
+  include:
+	- name: "Lint"
+	  script: npm run lint
+	- name: "Test"
+	  script: npm test
+script: npm run ng:build
 deploy:
   provider: script
   script: "bash ./scripts/deploy.sh"
