--- a/src/package.json
+++ b/src/package.json
@@ -14,9 +14,7 @@
 		"@carbon/icons-angular": "^11.0.0"
 	},
 	"dependencies": {
-		"@angular/animations": "^9.1.11",
 		"@carbon/utils-position": "1.1.3",
-		"flatpickr": "4.6.1",
-		"tslib": "^1.10.0"
+		"flatpickr": "4.6.1"
 	}
 }
