--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,6 @@
 	],
 	"angularCompilerOptions": {
 		"skipTemplateCodegen": true,
-		"strictMetadataEmit": true,
-		"fullTemplateTypeCheck": true,
-		"strictInjectionParameters": true,
-		"enableResourceInlining": true
+		"strictMetadataEmit": true
 	}
 }
