--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,36 +6,36 @@
 		"experimentalDecorators": true,
 		"downlevelIteration": true,
 		"importHelpers": true,
-		"lib": ["es2016", "dom"],
+		"lib": [
+			"es2016",
+			"dom"
+		],
 		"sourceMap": true,
 		"inlineSources": true,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"outDir": "./dist-pkg",
-		"rootDir": "src",
+		"rootDir": ".",
 		"target": "es2015",
+		"skipLibCheck": true,
 		"typeRoots": [
 			"./node_modules/@types"
 		],
 		"paths": {
-			"carbon-components-angular": [
-				"./src/index"
-			],
 			"carbon-components-angular/*": [
-				"./src/*/index"
+				"./src/index"
 			]
 		},
 	},
-	"include": [
-		"./src/**/*"
-	],
 	"exclude": [
 		"**/*.stories.ts",
 		"**/stories/**",
-		"**/*.spec.ts"
+		"**/*.spec.ts",
+		"**/node_modules/**"
 	],
 	"angularCompilerOptions": {
 		"skipTemplateCodegen": true,
-		"strictMetadataEmit": true
+		"strictMetadataEmit": false,
+		"fullTemplateTypeCheck": false
 	}
 }
