--- a/package.json
+++ b/package.json
@@ -82,18 +82,20 @@
     "@angular/platform-browser-dynamic": "7.2.16",
     "@angular/router": "7.2.16",
     "@babel/core": "7.4.3",
-    "@carbon/icons-angular": "11.0.1",
+	"@carbon/icons-angular": "11.0.1",
+	"@carbon/themes": "10.15.0",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@compodoc/compodoc": "1.1.7",
-    "@storybook/addon-actions": "5.3.13",
-    "@storybook/addon-knobs": "5.3.13",
-    "@storybook/addon-links": "5.3.13",
-    "@storybook/addon-notes": "5.3.13",
-    "@storybook/addon-options": "5.3.13",
-    "@storybook/addon-storysource": "5.3.13",
-    "@storybook/addons": "5.3.13",
-    "@storybook/angular": "5.3.13",
+    "@storybook/addon-actions": "5.3.19",
+    "@storybook/addon-knobs": "5.3.19",
+    "@storybook/addon-links": "5.3.19",
+    "@storybook/addon-notes": "5.3.19",
+    "@storybook/addon-options": "5.3.19",
+    "@storybook/addon-storysource": "5.3.19",
+    "@storybook/addons": "5.3.19",
+	"@storybook/angular": "5.3.19",
+	"@storybook/theming": "5.3.19",
     "@types/jasmine": "2.8.2",
     "@types/node": "11.13.0",
     "babel-loader": "8.0.5",
