--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
-    "@angular/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "@angular/forms": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@angular/common": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@angular/forms": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26 || ^0.9.0 || ^0.10.0",
     "carbon-components": "^10.0.0",
@@ -126,7 +126,7 @@
     "sass": "^1.26.10",
     "semantic-release": "17.0.4",
     "ts-helpers": "1.1.2",
-    "tsickle": "0.35.0",
+    "tsickle": "0.39.1",
     "tslib": "1.9.3",
     "tslint": "5.15.0",
     "typescript": "3.2.4",
