--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@types/jasmine": "2.8.2",
     "@types/node": "11.13.0",
     "babel-loader": "8.0.5",
-    "carbon-components": "10.17.0",
+    "carbon-components": "10.20.0",
     "chai": "4.2.0",
     "codelyzer": "5.0.0",
     "commitizen": "4.0.3",
@@ -134,6 +134,8 @@
     "zone.js": "0.8.26"
   },
   "dependencies": {
+    "@carbon/icon-helpers": "10.9.0",
+    "@carbon/icons": "10.19.0",
     "@carbon/utils-position": "1.1.3",
     "flatpickr": "4.6.1"
   }
