--- a/src/package.json
+++ b/src/package.json
@@ -11,9 +11,11 @@
 	"author": "IBM",
 	"peerDependencies": {
 		"carbon-components": "^10.0.0",
-		"@carbon/icons-angular": "^11.0.0"
+		"@carbon/icons-angular": "11.0.x || >11.1.1"
 	},
 	"dependencies": {
+		"@carbon/icon-helpers": "10.9.0",
+		"@carbon/icons": "10.20.0",
 		"@carbon/utils-position": "1.1.3",
 		"flatpickr": "4.6.1"
 	}
