--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,9 @@
 		"type": "git",
 		"url": "git@github.com:IBM/carbon-components-angular.git"
 	},
+	"scripts": {
+		"postinstall": "carbon-telemetry collect --install"
+	},
 	"license": "Apache-2.0",
 	"author": "IBM",
 	"peerDependencies": {
@@ -16,6 +19,7 @@
 	"dependencies": {
 		"@carbon/icon-helpers": "10.9.0",
 		"@carbon/icons": "10.20.0",
+		"@carbon/telemetry": "0.0.0-alpha.2",
 		"@carbon/utils-position": "1.1.3",
 		"flatpickr": "4.6.1"
 	}
