--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -54,10 +54,9 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: dist
-        path: dist/carbon-components-angular-0.0.0.tgz
     - run: |
         npm i
-        npm i ./dist/carbon-components-angular-0.0.0.tgz
+        npm i ./../../carbon-components-angular-0.0.0.tgz
         npm run build
         npm run build -- --prod
       working-directory: e2e/ng${{ matrix.angular-version }}
