fix integration tests

--- a/integration/ng10/angular.json
+++ b/integration/ng10/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng10"
+    }
+  },
+  "defaultProject": "ng10",
+  "cli": {
+    "analytics": false
+  }
 }
