--- a/integration/ng9/angular.json
+++ b/integration/ng9/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng9"
+    }
+  },
+  "defaultProject": "ng9",
+  "cli": {
+    "analytics": false
+  }
 }
