Removing all usages of @carbon/icons-angular. Changing localhost:4873 references in package-lock.json to https://registry.npmjs.org/ This to fix local development because following the Quickstart was failing when running the `npm install`.

--- a/src/package.json
+++ b/src/package.json
@@ -13,8 +13,7 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
-    "carbon-components": "^10.0.0",
-    "@carbon/icons-angular": "11.0.x || >11.1.1"
+    "carbon-components": "^10.0.0"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.9.0",
