--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -41,7 +41,7 @@ jobs:
 
     strategy:
       matrix:
-        angular-version: [7, 8, 9, 10, 11]
+        angular-version: [7, 8, 9, 10, 11, 12]
         node-version: [12.x]
 
     steps:
