Deprecate node-sass usage for sass (dart)
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/package.json
+++ b/package.json
@@ -118,9 +118,8 @@
     "karma-jasmine-html-reporter": "1.4.2",
     "lodash-es": "4.17.15",
     "ng-packagr": "4.7.1",
-    "node-sass": "7.0.0",
     "rxjs": "6.4.0",
-    "sass": "^1.26.10",
+    "sass": "1.49.9",
     "sass-loader": "10.1.1",
     "semantic-release": "17.2.3",
     "ts-helpers": "1.1.2",
