--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@angular/router": "7.2.16",
     "@babel/core": "7.4.3",
     "@carbon/styles": "^0.16.2",
-    "@carbon/themes": "10.15.0",
+    "@carbon/themes": "10.53.2",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@storybook/addon-actions": "5.3.19",
@@ -133,9 +133,9 @@
     "zone.js": "0.8.26"
   },
   "dependencies": {
-    "@carbon/icon-helpers": "10.9.0",
-    "@carbon/icons": "10.27.0",
-    "@carbon/telemetry": "0.0.0-alpha.6",
+    "@carbon/icon-helpers": "10.28.0",
+    "@carbon/icons": "10.48.0",
+    "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.3",
     "flatpickr": "4.6.1"
   }
