--- a/src/carbon.yml
+++ b/src/carbon.yml
@@ -169,7 +169,7 @@ assets:
       - type: storybook
         name: Storybook
         action: link
-        url: https://angular.carbondesignsystem.com/?path=/story/components-link
+        url: https://www.angular.carbondesignsystem.com/?path=/story/components-link
   list:
     name: List
     status: stable
