Update integration tests to use new carbon styles package
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/integration/ng11/package.json
+++ b/integration/ng11/package.json
@@ -19,11 +19,11 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@carbon/styles": "^1.2.0",
+    "carbon-components-angular": "latest",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "carbon-components": "^10.0.0",
-    "carbon-components-angular": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
