--- a/integration/ng7/package.json
+++ b/integration/ng7/package.json
@@ -19,12 +19,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@carbon/styles": "^1.2.0",
+    "carbon-components-angular": "latest",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "carbon-components": "^10.0.0",
-    "carbon-components-angular": "latest"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
