--- a/integration/ng9/package.json
+++ b/integration/ng9/package.json
@@ -19,11 +19,11 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@carbon/styles": "^1.2.0",
+    "carbon-components-angular": "latest",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "carbon-components": "^10.0.0",
-    "carbon-components-angular": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
