--- a/integration/ng10/package.json
+++ b/integration/ng10/package.json
@@ -19,11 +19,11 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@carbon/styles": "^1.2.0",
+    "carbon-components-angular": "latest",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "carbon-components": "^10.0.0",
-    "carbon-components-angular": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
