--- a/integration/ng8/package.json
+++ b/integration/ng8/package.json
@@ -19,11 +19,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@carbon/styles": "^1.2.0",
+    "carbon-components-angular": "latest",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "carbon-components": "^10.0.0",
-    "carbon-components-angular": "latest"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.29",
