--- a/integration/ng14/package.json
+++ b/integration/ng14/package.json
@@ -4,20 +4,20 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/animations": "~14.0.1",
+    "@angular/common": "~14.0.1",
+    "@angular/compiler": "~14.0.1",
+    "@angular/core": "~14.0.1",
+    "@angular/forms": "~14.0.1",
+    "@angular/platform-browser": "~14.0.1",
+    "@angular/platform-browser-dynamic": "~14.0.1",
+    "@angular/router": "~14.0.1",
     "carbon-components": "^10.0.0",
     "carbon-components-angular": "latest",
     "rxjs": "~7.5.0",
@@ -25,9 +25,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.1",
+    "@angular-devkit/build-angular": "~14.0.1",
     "@angular/cli": "~14.0.1",
-    "@angular/compiler-cli": "^14.0.0",
+    "@angular/compiler-cli": "~14.0.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
