Upgrade to angular 8
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/package.json
+++ b/package.json
@@ -64,26 +64,21 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
-    "@angular/common": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0",
-    "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0",
-    "@angular/forms": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26 || ^0.9.0 || ^0.10.0 || ^0.11.0",
     "@carbon/styles": "^1.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.9",
-    "@angular-devkit/build-ng-packagr": "0.13.9",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular-devkit/build-ng-packagr": "~0.803.29",
     "@angular-devkit/core": "7.3.9",
-    "@angular/cli": "7.3.9",
-    "@angular/common": "7.2.16",
-    "@angular/compiler": "7.2.16",
-    "@angular/compiler-cli": "7.2.16",
-    "@angular/core": "7.2.16",
-    "@angular/forms": "7.2.16",
-    "@angular/platform-browser": "7.2.16",
-    "@angular/platform-browser-dynamic": "7.2.16",
-    "@angular/router": "7.2.16",
+    "@angular/cli": "8.3.29",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@babel/core": "7.4.3",
     "@carbon/styles": "1.4.0",
     "@carbon/themes": "11.0.1",
@@ -102,7 +97,7 @@
     "@types/node": "11.13.0",
     "babel-loader": "8.0.5",
     "chai": "4.2.0",
-    "codelyzer": "5.0.0",
+    "codelyzer": "^5.0.1",
     "commitizen": "4.2.4",
     "core-js": "2.6.11",
     "cz-conventional-changelog-components": "1.0.0",
@@ -122,20 +117,20 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "lodash-es": "4.17.21",
-    "ng-packagr": "4.7.1",
-    "rxjs": "6.4.0",
+    "ng-packagr": "^5.4.0",
+    "rxjs": "6.6.7",
     "sass": "1.49.9",
     "sass-loader": "10.1.1",
     "semantic-release": "17.2.3",
     "ts-helpers": "1.1.2",
-    "tsickle": "0.37.0",
-    "tslib": "1.9.3",
+    "tsickle": "^0.37.0",
+    "tslib": "1.14.1",
     "tslint": "5.15.0",
     "typedoc": "0.14.2",
     "typedoc-plugin-external-module-name": "^4.0.3",
-    "typescript": "3.2.4",
+    "typescript": "3.5.3",
     "whatwg-fetch": "3.0.0",
-    "zone.js": "0.8.26"
+    "zone.js": "~0.9.1"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.30.0",
