--- a/src/tsconfig.lib.json
+++ b/src/tsconfig.lib.json
@@ -2,5 +2,8 @@
   "extends": "./../tsconfig.json",
   "compilerOptions": {
 	  "rootDir": "."
+  },
+  "angularCompilerOptions": {
+    "enableIvy": false
   }
 }
