--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "sass-loader": "10.1.1",
     "semantic-release": "17.2.3",
     "ts-helpers": "1.1.2",
-    "tslint": "5.15.0",
+    "tslint": "~6.1.0",
     "typedoc": "0.14.2",
     "typedoc-plugin-external-module-name": "^4.0.3",
     "typescript": "4.0.8",
