@angular/cli migration - update-libraries-tslib
Update library projects to use tslib version 2 as a direct dependency. Read more about this here: https://v10.angular.io/guide/migration-update-libraries-tslib

Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "@carbon/icons": "11.0.2",
     "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
-    "flatpickr": "4.6.1"
+    "flatpickr": "4.6.1",
+    "tslib": "^2.0.0"
   }
 }
