--- a/package.json
+++ b/package.json
@@ -108,16 +108,16 @@
     "gulp-concat": "2.6.1",
     "gulp-tap": "1.0.1",
     "husky": "1.3.1",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "6.3.16",
-    "karma-chrome-launcher": "2.2.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "lodash-es": "4.17.21",
-    "ng-packagr": "^10.1.2",
+    "ng-packagr": "^10.1.0",
     "rxjs": "6.6.7",
     "sass": "1.49.9",
     "sass-loader": "10.1.1",
@@ -136,6 +136,6 @@
     "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
     "flatpickr": "4.6.13",
-    "tslib": "^2.4.0"
+    "tslib": "^2.0.0"
   }
 }
